--- a/packages/server/.env
+++ b/packages/server/.env
@@ -1,3 +1,6 @@
+SECRET_KEY=django-insecure-_5zoj_@_!p)8%t@68#7-8-5th!if3^i7o6ji8jzh^3g!^9&ld5
+DEBUG=True
+
 CLOUDINARY_CLOUD_NAME=ddw7sjyos
 CLOUDINARY_API_KEY=463136417837317
 CLOUDINARY_API_SECRET=bexjrtk-OGSVetoHW4pLrvJtFvA
