--- a/packages/server/.env
+++ b/packages/server/.env
@@ -1,6 +1,8 @@
 SECRET_KEY=django-insecure-_5zoj_@_!p)8%t@68#7-8-5th!if3^i7o6ji8jzh^3g!^9&ld5
 DEBUG=True
 
+DATABASE_URL=postgresql://reapers_db_user:akrc6FILESsYc4qorCC04aFYKWyv8Z68@dpg-d55a73e3jp1c739o0bb0-a/reapers_db
+
 CLOUDINARY_CLOUD_NAME=ddw7sjyos
 CLOUDINARY_API_KEY=463136417837317
 CLOUDINARY_API_SECRET=bexjrtk-OGSVetoHW4pLrvJtFvA
